<?xml version="1.0"?>
<package>
  <name>ccr</name>
  <version>0.0.1</version>
  <description>The co-creation robot package</description>

  <maintainer email="todo@jp.panasonic.com">Panasonic</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>serial</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>rulo_msgs</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>serial</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>ccr_msgs</run_depend>
</package>
