<?xml version="1.0"?>
<package>
  <name>ccr_msgs</name>
  <version>0.0.1</version>
  <description>The co-create robot's message files</description>

  <maintainer email="todo@jp.panasonic.com">Panasonic</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
