<?xml version="1.0"?>
<package>
  <name>navi_param</name>
  <version>0.0.1</version>
  <description>The Navigation parameters package</description>

  <maintainer email="todo@jp.panasonic.com">Panasonic</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
